# piles-of-eternity

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  conanfile.txt
.github/workflows/: build.yml
src/: CMakeLists.txt
src/asset-packer/: CMakeLists.txt  test.json
src/asset-packer/include/: compression.h  file_io.h
src/asset-packer/src/: compression.cpp  file_io.cpp  main.cpp
src/piles-of-eternity/: CMakeLists.txt
src/piles-of-eternity/include/: game.h
src/piles-of-eternity/include/graphics/: graphics.h  texture.h  window.h
src/piles-of-eternity/include/resource/: resource_manager.h
src/piles-of-eternity/src/: game.cpp  main.cpp
src/piles-of-eternity/src/graphics/: graphics.cpp  texture.cpp  window.cpp
src/piles-of-eternity/src/resource/: resource_manager.cpp
src/psl/: CMakeLists.txt  README.md
src/psl/include/psl/: file_io.h  result.h
src/psl/src/: file_io.cpp
